@@ -48,28 +48,6 @@
     <jacoco.min.linecoverage>0.60</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.60</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
-      --add-exports com.azure.core/com.azure.core.implementation.http.rest=ALL-UNNAMED
-      --add-exports com.azure.core/com.azure.core.implementation.serializer=ALL-UNNAMED
-
-      --add-opens com.azure.core/com.azure.core=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.credential=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.http=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.http.policy=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.http.rest=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.implementation=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.implementation.http.rest=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.implementation.serializer=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.implementation.logging=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.models=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util.tracing=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util.logging=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util.polling=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util.serializer=ALL-UNNAMED
-
-      --add-reads com.azure.core=ALL-UNNAMED
     </javaModulesSurefireArgLine>
 
     <!-- If JMH benchmarking was ran Checkstyle may fail on jmh_benchmark generated classes, ignore them. -->
@@ -77,7 +55,7 @@
 
     <!-- Enables fail on deprecated API usage. -->
     <compiler.failondeprecatedstatus/>
-    <javadoc.excludePackageNames>com.azure.json</javadoc.excludePackageNames>
+    <javadoc.excludePackageNames>io.clientcore.core</javadoc.excludePackageNames>
 
     <!-- TODO (alzimmer): Remove this once samples are added back -->
     <codesnippet.skip>true</codesnippet.skip>
